###sube stok finitoooooo#####

--- a/B2BApp.Web/Views/SubeStok/Index.cshtml
+++ b/B2BApp.Web/Views/SubeStok/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 
 }
 
@@ -8,7 +9,7 @@
     <hr />
 
     <div class="" style="display: flex;justify-content: flex-end;">
-        <button class="btn btn-success" data-bs-toggle="offcanvas" data-bs-target="#Ekleme" aria-controls="Ekleme"><i class="bi bi-plus"></i> Yeni Sube Stok</button>
+        <button onClick ="loadData()" class="btn btn-success" data-bs-toggle="offcanvas" data-bs-target="#Ekleme" aria-controls="Ekleme"><i class="bi bi-plus"></i> Yeni Sube Stok</button>
 
     </div>
     <br />
@@ -30,27 +31,88 @@
 </div>
 
 @* Ekleme *@
-<div class="offcanvas offcanvas-end" tabindex="-1" id="Ekleme" aria-labelledby="offcanvasRightLabel">
+<div  class="offcanvas offcanvas-end" tabindex="-1" id="Ekleme" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">Offcanvas right</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        Ekle
+
+        <div class="container">
+
+            
+            <br />
+
+            <div class="input-group">
+                <label for="subeSelect" class="form-label" style="margin-right: 10px;">Sube: </label> <select id="subeSelect" placeholder='select item'></select>
+            </div>
+            <br />
+
+            <div class="input-group">
+                <label for="urunSelect" class="form-label" style="margin-right: 10px;">Urun: </label> <select class="select2" id="urunSelect" placeholder='select item'></select>
+            </div>
+            <br />
+
+            <div class="input-group">
+                <label for="stok" class="form-label" style="margin-right: 10px;">Stok:</label>
+                <input type="number" id="stok" class="form-control" value="">
+            </div>
+            <br />
+
+            <div style="display: flex;justify-content: flex-end;">
+                <button onclick=save() class="btn btn-secondary">Kaydet</button>
+            </div>
+
+        </div>
+
+
+
+
     </div>
 </div>
 @* Ekleme *@
 
 @* Guncelleme *@
-<div class="offcanvas offcanvas-end" tabindex="-1" id="Guncelleme" aria-labelledby="offcanvasRightLabel">
+ <div class="offcanvas offcanvas-end" tabindex="-1" id="Guncelleme" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">Offcanvas right</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close" id="dismissButton"></button>
     </div>
     <div class="offcanvas-body">
-        Guncelle
+
+
+        <div class="container">
+
+            <label type="text" id="subeStokId" value="" hidden></label>
+            <br />
+
+            <div class="input-group">
+                <label for="subeSelectUpdate" class="form-label" style="margin-right: 10px;">Sube: </label> <select id="subeSelectUpdate" placeholder='select item'></select>
+            </div>
+            <br />
+
+            <div class="input-group">
+                <label for="urunSelectUpdate" class="form-label" style="margin-right: 10px;">Urun: </label> <select class="select2" id="urunSelectUpdate" placeholder='select item'></select>
+            </div>
+            <br />
+
+            <div class="input-group">
+                <label for="stokUpdate" class="form-label" style="margin-right: 10px;">Stok:</label>
+                <input type="number" id="stokUpdate" class="form-control" value="">
+            </div>
+            <br />
+
+            <div style="display: flex;justify-content: flex-end;">
+                <button onclick=update() class="btn btn-secondary">Kaydet</button>
+            </div>
+
+        </div>
+
+
+
+
     </div>
-</div>
+</div> 
 @* Guncelleme *@
 
 
@@ -60,33 +122,29 @@
 <script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.dataTables.css" />
+@* select2 kullanımı *@
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js" defer></script>
+
 <script type="text/javascript">
     let table;
     //datatable
     $(document).ready(function loadTable() {
         table = $('#subeStokTable').DataTable({
-            "language": {
-                url: '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json',
-            },
-            "ajax":
-            {
-                "url": "https://localhost/api/SubeStok/GetAllWithSubeAndUrun"
-            },
-
+            "language": { "url": '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json'},
+            "ajax":{"url": "https://localhost/api/SubeStok/GetAllWithSubeAndUrun"},
             "columns": [
                 { "data": 'sube.subeAdi' },
                 { "data": 'urun.urunAdi' },
                 { "data": 'stok' },
-
-
                 {
                     "data": "id",
                     "render": function (data) {
                         return `
-                                                      <div class="w-75 btn-group" role="group">
-                                                                  <a onClick=getUrunInfo("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#Guncelleme" aria-controls="Guncelleme"></i>Edit</a>
-                                                          <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
-                                                      </div>`
+                                                          <div class="w-75 btn-group" role="group">
+                                                             <a onClick=loadForUpdate("${data}") class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#Guncelleme" aria-controls="Guncelleme"></i>Edit</a>
+                                                              <a onClick=Delete("${data}") class="btn btn-danger mx-2"><i class="bi bi-trash"></i>Delete</a>
+                                                          </div>`
                     },
                     "width": "20%"
                 },
@@ -94,38 +152,246 @@
         });
     });
 
-    function Delete(url) {
+    function loadData() {
+        $.ajax({
+            url: 'https://localhost/api/Sube/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            }
+        }).done(function (response) {
+            result = $.map(response.data, function (data) {
+                return {
+                    id: data.id,
+                    text: data.subeAdi
+                };
+            });
+
+            $("#subeSelect").select2({
+                placeholder: "Şubeler",
+                data: result,
+                width: 200,
+
+            });
+
+        });
+        $.ajax({
+            url: 'https://localhost/api/urun/all',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            }
+        }).done(function (response) {
+            result = $.map(response.data, function (data) {
+                return {
+                    id: data.id,
+                    text: data.urunAdi
+                };
+            });
+
+            $("#urunSelect").select2({
+                placeholder: "Urunler",
+                data: result,
+                width: 200,
+
+            });
+
+        });
+    }
+
+
+    function save() {
+        let subeId = $("#subeSelect").val();
+        let urunId = $("#urunSelect").val();
+        let stok = $("#stok").val();
+
+        $.ajax({
+            url: 'https://localhost/api/SubeStok',
+            crossDomain: true,
+            method: 'post',
+            headers: {
+                'accept': 'text/plain'
+            },
+            contentType: 'application/json',
+            // data: '{\n  "id": "string",\n  "subeId": "string",\n  "urunId": "string",\n  "stok": 0\n}',
+            data: JSON.stringify({
+                'id': '',
+                'subeId': subeId,
+                'urunId': urunId,
+                'stok': stok
+            })
+        }).done(function (response) {
+            if (response != null) {
+                //Reload/redraw the table with new data
+                table.ajax.reload();
+
+                Swal.fire({
+                    title: "Urun Eklendi",
+                    icon: "success"
+                });
+            } else {
+                Swal.fire({
+                    title: "Urun Eklenirken Bir Sorun Oluştu",
+                    icon: "error"
+                });
+            }
+        });
+    }
+    function Delete(data) {
+
         Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
+            title: 'Emin Misiniz?',
+            text: "Silindikten Sonra Geri Alamazsınız!",
             icon: 'warning',
             showCancelButton: true,
             confirmButtonColor: '#3085d6',
             cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
+            cancelButtonText: "Geri",
+            confirmButtonText: 'Evet Sil'
         }).then((result) => {
             if (result.isConfirmed) {
+
                 $.ajax({
-                    url: url,
-                    type: 'DELETE',
-                    success: function (data) {
-                        if (data.success) {
-                            Swal.fire({
-                                title: "SubeStok Silindi",
-                                icon: "success"
-                            });
-                        }
-                        else {
-                            Swal.fire({
-                                title: "SubeStok Silinirken Bir Sorun Oluştu",
-                                icon: "error"
-                            });
-                        }
+                    url: 'https://localhost/api/SubeStok?id=' + data,
+                    crossDomain: true,
+                    method: 'delete',
+                    headers: {
+                        'accept': 'text/plain'
                     }
-                })
+                }).done(function (response) {
+                    console.log(response);
+                    if (response != null || data != null) {
+
+                        table.ajax.reload();
+
+                        Swal.fire({
+                            title: "Urun Silindi",
+                            icon: "success"
+                        });
+                    }
+                    else {
+                        Swal.fire({
+                            title: "Urun Silinirken Bir Sorun Oluştu",
+                            icon: "error"
+                        });
+                    }
+                });
             }
         })
     }
+    
+    function loadForUpdate(data) {
+        $.ajax({
+            url: 'https://localhost/api/SubeStok/GetWithSubeAndUrun',
+            crossDomain: true,
+            headers: {
+                'accept': 'text/plain'
+            },
+            data: {
+                'id': data
+            }
+        }).done(function (response) {
+            $.ajax({
+                url: 'https://localhost/api/Sube/all',
+                crossDomain: true,
+                headers: {
+                    'accept': 'text/plain'
+                }
+            }).done(function (response) {
+                result = $.map(response.data, function (data) {
+                    return {
+                        id: data.id,
+                        text: data.subeAdi
+                    };
+                });
+
+                $("#subeSelectUpdate").select2({
+                    placeholder: "Şubeler",
+                    data: result,
+                    width: 200,
+
+                });
+
+            });
+            $.ajax({
+                url: 'https://localhost/api/urun/all',
+                crossDomain: true,
+                headers: {
+                    'accept': 'text/plain'
+                }
+            }).done(function (response) {
+                result = $.map(response.data, function (data) {
+                    return {
+                        id: data.id,
+                        text: data.urunAdi
+                    };
+                });
+
+                $("#urunSelectUpdate").select2({
+                    placeholder: "Urunler",
+                    data: result,
+                    width: 200,
+
+                });
+
+            });
+
+            //burada guncel verileri atayacağız
+            $("#subeSelectUpdate").val(response.data.sube.id).trigger('change');
+            $("#urunSelectUpdate").val(response.data.urun.id).trigger('change');
+            $("#stokUpdate").val(response.data.stok);
+            $("#subeStokId").val(response.data.id);
+
+
+           
+
+
+        });
+
+
+
+
+       
+    }
+
+    function update(){
+        //burada guncel verileri alacağız
+        let subeId = $("#subeSelectUpdate").val();
+        let urunId= $("#urunSelectUpdate").val();
+        let stok = $("#stokUpdate").val();
+        let id = $("#subeStokId").val();
+
+        $.ajax({
+            url: 'https://localhost/api/SubeStok?subeStokId=' + id,
+            crossDomain: true,
+            method: 'put',
+            headers: {
+                'accept': 'text/plain'
+            },
+            contentType: 'application/json',
+            // data: '{\n  "id": "string",\n  "subeId": "string",\n  "urunId": "string",\n  "stok": 0\n}',
+            data: JSON.stringify({
+                'id': id,
+                'subeId': subeId,
+                'urunId': urunId,
+                'stok': stok
+            })
+        }).done(function (response) {
+
+            $("#dismissButton").click()
+            //Reload/redraw the table with new data
+            table.ajax.reload();
+
+            Swal.fire({
+                title: "Urun Güncellendi",
+                icon: "success"
+            });
+
+
+        });
+
+    }
+
 
 
 </script>
