--- a/B2BApp.Web/Views/Satis/Index.cshtml
+++ b/B2BApp.Web/Views/Satis/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Index";
+        Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 
 }
 
 <div class="container">
     <h2>Satışlar</h2>
-    <hr />
 
     <div class="" style="display: flex;justify-content: flex-end;">
         <button onClick="loadData()" class="btn btn-success" data-bs-toggle="offcanvas" data-bs-target="#Ekleme" aria-controls="Ekleme"><i class="bi bi-plus"></i> Yeni Sube Stok</button>
